@@ -26,6 +26,9 @@ class FrontendSettings(SingletonModel):
         help_text=_('The number of weeks displayed in the recent history overview.')
     )
 
+    def __str__(self):
+        return self._meta.verbose_name.title()
+
     class Meta:
         default_permissions = tuple()
         verbose_name = _('Frontend configuration')
