@@ -4,7 +4,7 @@
 {% load i18n %} 
 
 {% block title %}{% trans "Dashboard" %}{% endblock %}
-{% block header %}{% trans "Dashboard" %}{% endblock %}
+{% block header %}{% trans "Dashboard" %} &nbsp; <i class="fa fa-dashboard"></i>{% endblock %}
 
 {% block content %}
 <!-- Main content -->
