@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}{% trans "Recent history" %}{% endblock %}
-{% block header %}{% trans "Recent history" %}{% endblock %}
+{% block header %}{% trans "Recent history" %} &nbsp; <i class="fa fa-area-chart"></i>{% endblock %}
 
 {% block content %}
 <!-- Main content -->
