@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block title %}{% trans "Statistics" %}{% endblock %}
-{% block header %}{% trans "Statistics" %}{% endblock %}
+{% block header %}{% trans "Statistics" %} &nbsp; <i class="fa fa-list"></i>{% endblock %}
 
 {% block content %}
 <!-- Main content -->
