@@ -1,0 +1,164 @@
+{% extends "dsmr_frontend/base.html" %}
+{% load humanize %} 
+{% load static %} 
+{% load i18n %}
+{% load model_meta_info %}
+
+{% block title %}{% trans "Status" %}{% endblock %}
+{% block header %}{% trans "Status" %} &nbsp; <i class="fa fa-heartbeat"></i>{% endblock %}
+
+{% block content %}
+<!-- Main content -->
+<section class="content">
+    <div class="alert alert-info" role="alert">
+        {% blocktrans %}This page displays all settings and the status of them. You can change them here{% endblocktrans %}: 
+        &nbsp; <a href="{% url 'admin:index' %}" class="btn btn-success"><i class="fa fa-cogs"></i> <span>{% trans "Settings" %}</span></a>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel">
+                <header class="panel-heading">
+                    <a href="{% url 'admin:dsmr_consumption_consumptionsettings_change' consumption_settings.pk %}" class="btn btn-success"><i class="fa fa-cogs"></i></a> &nbsp;{{ consumption_settings }} 
+                </header>
+                <div class="panel-body">
+                    <table class="table table-condensed">
+                        <tr>
+                            <th class="col-md-3">{% trans "Setting" %}</th>
+                            <th class="col-md-3">{% trans "Value" %} </th>
+                            <th class="col-md-6">{% trans "Description" %} </th>
+                        </tr>
+                        <tr>
+                            <td>{% model_meta_info consumption_settings 'compactor_grouping_type' 'verbose_name' %}</td>
+                            <td>{{consumption_settings.get_compactor_grouping_type_display}}</td>
+                            <td>{% model_meta_info consumption_settings 'compactor_grouping_type' 'help_text' %}</td>
+                        </tr>
+                    </table>
+                </div><!-- /.panel-body -->
+            </div><!-- /.panel -->
+        </div><!-- /.col -->
+    </div><!-- /.row -->
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel">
+                <header class="panel-heading">
+                    <a href="{% url 'admin:dsmr_datalogger_dataloggersettings_change' datalogger_settings.pk %}" class="btn btn-success"><i class="fa fa-cogs"></i></a> &nbsp; {{ datalogger_settings }} 
+                </header>
+                <div class="panel-body">
+                    <table class="table table-condensed">
+                        <tr>
+                            <th class="col-md-3">{% trans "Setting" %}</th>
+                            <th class="col-md-3">{% trans "Value" %} </th>
+                            <th class="col-md-6">{% trans "Description" %} </th>
+                        </tr>
+                        <tr{% if not datalogger_settings.track %} class="alert alert-danger"{% endif %}>
+                            <td>{% model_meta_info datalogger_settings 'track' 'verbose_name' %}</td>
+                            <td>{{ datalogger_settings.track|yesno }}</td>
+                            <td>{% model_meta_info datalogger_settings 'track' 'help_text' %}</td>
+                        </tr>
+                        <tr>
+                            <td>{% model_meta_info datalogger_settings 'track_meter_statistics' 'verbose_name' %}</td>
+                            <td>{{ datalogger_settings.track_meter_statistics|yesno }}</td>
+                            <td>{% model_meta_info datalogger_settings 'track_meter_statistics' 'help_text' %}</td>
+                        </tr>
+                        <tr>
+                            <td>{% model_meta_info datalogger_settings 'dsmr_version' 'verbose_name' %}</td>
+                            <td>{{datalogger_settings.get_dsmr_version_display}}</td>
+                            <td>{% model_meta_info datalogger_settings 'dsmr_version' 'help_text' %}</td>
+                        </tr>
+                        <tr>
+                            <td>{% model_meta_info datalogger_settings 'com_port' 'verbose_name' %}</td>
+                            <td>{{datalogger_settings.com_port}}</td>
+                            <td>{% model_meta_info datalogger_settings 'com_port' 'help_text' %}</td>
+                        </tr>
+                    </table>
+                </div><!-- /.panel-body -->
+            </div><!-- /.panel -->
+        </div><!-- /.col -->
+    </div><!-- /.row -->
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel">
+                <header class="panel-heading">
+                    <a href="{% url 'admin:dsmr_frontend_frontendsettings_change' frontend_settings.pk %}" class="btn btn-success"><i class="fa fa-cogs"></i></a> &nbsp; {{ frontend_settings }} 
+                </header>
+                <div class="panel-body">
+                    <table class="table table-condensed">
+                        <tr>
+                            <th class="col-md-3">{% trans "Setting" %}</th>
+                            <th class="col-md-3">{% trans "Value" %} </th>
+                            <th class="col-md-6">{% trans "Description" %} </th>
+                        </tr>
+                        <tr>
+                            <td>{% model_meta_info frontend_settings 'reverse_dashboard_graphs' 'verbose_name' %}</td>
+                            <td>{{ frontend_settings.reverse_dashboard_graphs|yesno }}</td>
+                            <td>{% model_meta_info frontend_settings 'reverse_dashboard_graphs' 'help_text' %}</td>
+                        </tr>
+                        <tr>
+                            <td>{% model_meta_info frontend_settings 'recent_history_weeks' 'verbose_name' %}</td>
+                            <td>{{frontend_settings.get_recent_history_weeks_display}}</td>
+                            <td>{% model_meta_info frontend_settings 'recent_history_weeks' 'help_text' %}</td>
+                        </tr>
+                    </table>
+                </div><!-- /.panel-body -->
+            </div><!-- /.panel -->
+        </div><!-- /.col -->
+    </div><!-- /.row -->
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel">
+                <header class="panel-heading">
+                    <a href="{% url 'admin:dsmr_stats_statssettings_change' stats_settings.pk %}" class="btn btn-success"><i class="fa fa-cogs"></i></a> &nbsp; {{ stats_settings }}
+                </header>
+                <div class="panel-body">
+                    <table class="table table-condensed">
+                        <tr>
+                            <th class="col-md-3">{% trans "Setting" %}</th>
+                            <th class="col-md-3">{% trans "Value" %} </th>
+                            <th class="col-md-6">{% trans "Description" %} </th>
+                        </tr>
+                        <tr>
+                            <td>{% model_meta_info stats_settings 'track' 'verbose_name' %}</td>
+                            <td>{{ stats_settings.track|yesno }}</td>
+                            <td>{% model_meta_info stats_settings 'track' 'help_text' %}</td>
+                        </tr>
+                    </table>
+                </div><!-- /.panel-body -->
+            </div><!-- /.panel -->
+        </div><!-- /.col -->
+    </div><!-- /.row -->
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel">
+                <header class="panel-heading">
+                    <a href="{% url 'admin:dsmr_weather_weathersettings_change' weather_settings.pk %}" class="btn btn-success"><i class="fa fa-cogs"></i></a> &nbsp; {{ weather_settings }}
+                </header>
+                <div class="panel-body">
+                    <table class="table table-condensed">
+                        <tr>
+                            <th class="col-md-3">{% trans "Setting" %}</th>
+                            <th class="col-md-3">{% trans "Value" %} </th>
+                            <th class="col-md-6">{% trans "Description" %} </th>
+                        </tr>
+                        <tr>
+                            <td>{% model_meta_info weather_settings 'track' 'verbose_name' %}</td>
+                            <td>{{ weather_settings.track|yesno }}</td>
+                            <td>{% model_meta_info weather_settings 'track' 'help_text' %}</td>
+                        </tr>
+                        <tr>
+                            <td>{% model_meta_info weather_settings 'buienradar_station' 'verbose_name' %}</td>
+                            <td>{{weather_settings.get_buienradar_station_display}}</td>
+                            <td>{% model_meta_info weather_settings 'buienradar_station' 'help_text' %}</td>
+                        </tr>
+                    </table>
+                </div><!-- /.panel-body -->
+            </div><!-- /.panel -->
+        </div><!-- /.col -->
+    </div><!-- /.row -->
+
+</section><!-- /.content -->
+{% endblock %}
