@@ -4,7 +4,7 @@
 {% load i18n %} 
 
 {% block title %}{% trans "Trends" %}{% endblock %}
-{% block header %}{% trans "Trends" %}{% endblock %}
+{% block header %}{% trans "Trends" %} &nbsp; <i class="fa fa-line-chart"></i>{% endblock %}
 
 {% block content %}
 <!-- Main content -->
