@@ -25,6 +25,9 @@ class WeatherSettings(SingletonModel):
         )
     )
 
+    def __str__(self):
+        return self._meta.verbose_name.title()
+
     class Meta:
         default_permissions = tuple()
         verbose_name = _('Weather configuration')
