@@ -3,7 +3,8 @@
 
 v0.11 (β) - 2016-xx-xx
 ======================
-- 
+- Status page/alerts when features are disabled/unavailable (#45).
+-
 
 
 
